--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -27,16 +27,27 @@ versions:
 dependencies:
   - apache-airflow>=2.5.0
 
-# integrations:
+integrations:
+  - integration-name: Huawei Cloud SMN
+    external-doc-url: https://www.alibabacloud.com/help/product/31815.htm
+    logo: /integration-logos/alibaba/cloud/alibabacloud-oss.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-alibaba/operators/oss.rst
+    tags: [alibaba]
+
+operators:
+  - integration-name: Huawei Cloud SMN
+    python-modules:
+      - airflow.providers.huawei.cloud.operators.smn
+#
+# sensors:
 #   -
 #
-# operators: 
-#   -
-#
-# sensors: 
-#   -
-#
-# hooks:
-#   -
-#
-#
+hooks:
+  - integration-name: Huawei Cloud SMN
+    python-modules:
+      - airflow.providers.huawei.cloud.hooks.smn
+
+connection-types:
+  - hook-class-name: airflow.providers.huawei.cloud.hooks.smn.SMNHook
+    connection-type: huaweicloud
