--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -26,19 +26,17 @@ versions:
 
 dependencies:
   - apache-airflow>=2.5.0
-
-integrations:
-  - integration-name: Huawei Cloud SMN
-    external-doc-url: https://www.alibabacloud.com/help/product/31815.htm
-    logo: /integration-logos/alibaba/cloud/alibabacloud-oss.png
-    how-to-guide:
-      - /docs/apache-airflow-providers-alibaba/operators/oss.rst
-    tags: [alibaba]
+  - huaweicloudsdkcore>=3.1.19
+  - huaweicloudsdksmn>=3.1.19
+  - huaweicloudsdkdli>=3.1.19
 
 operators:
   - integration-name: Huawei Cloud SMN
     python-modules:
       - airflow.providers.huawei.cloud.operators.smn
+  - integration-name: Huawei Cloud DLI
+    python-modules:
+      - airflow.providers.huawei.cloud.operators.dli
 #
 # sensors:
 #   -
@@ -47,7 +45,10 @@ hooks:
   - integration-name: Huawei Cloud SMN
     python-modules:
       - airflow.providers.huawei.cloud.hooks.smn
+  - integration-name: Huawei Cloud DLI
+    python-modules:
+      - airflow.providers.huawei.cloud.hooks.dli
 
 connection-types:
-  - hook-class-name: airflow.providers.huawei.cloud.hooks.smn.SMNHook
+  - hook-class-name: airflow.providers.huawei.cloud.hooks.base_huawei_cloud.HuaweiBaseHook
     connection-type: huaweicloud
