--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -30,6 +30,7 @@ dependencies:
   - huaweicloudsdksmn>=3.1.19
   - huaweicloudsdkdli>=3.1.19
   - huaweicloudsdkcdm>=3.1.19
+  - huaweicloudsdkdlf>=3.1.19
 
 operators:
   - integration-name: Huawei Cloud SMN
@@ -41,6 +42,9 @@ operators:
   - integration-name: Huawei Cloud CDM
     python-modules:
       - airflow.providers.huawei.cloud.operators.cdm
+  - integration-name: Huawei Cloud DLF
+    python-modules:
+      - airflow.providers.huawei.cloud.operators.dlf
 
 sensors:
   - integration-name: Huawei Cloud DLI
@@ -49,6 +53,9 @@ sensors:
   - integration-name: Huawei Cloud CDM
     python-modules:
       - airflow.providers.huawei.cloud.sensors.cdm
+  - integration-name: Huawei Cloud DLF
+    python-modules:
+      - airflow.providers.huawei.cloud.sensors.dlf
 
 hooks:
   - integration-name: Huawei Cloud SMN
@@ -60,6 +67,9 @@ hooks:
   - integration-name: Huawei Cloud CDM
     python-modules:
       - airflow.providers.huawei.cloud.hooks.cdm
+  - integration-name: Huawei Cloud DLF
+    python-modules:
+      - airflow.providers.huawei.cloud.hooks.dlf
 
 connection-types:
   - hook-class-name: airflow.providers.huawei.cloud.hooks.base_huawei_cloud.HuaweiBaseHook
