--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -36,6 +36,51 @@ dependencies:
   - huaweicloudsdkdlf>=3.1.19
   - huaweicloudsdkiam>=3.1.19
 
+integrations:
+  - integration-name: Huawei Cloud CDM
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/cdm/index.html
+    logo: /integration-logos/huawei/CDM.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/cdm.rst
+    tags: [huawei]
+
+
+  - integration-name: Huawei Cloud DataArts
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/dataartsstudio/index.html
+    logo: /integration-logos/huawei/DataArts.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/dataarts.rst
+    tags: [huawei]
+
+
+  - integration-name: Huawei Cloud DLI
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/dli/index.html
+    logo: /integration-logos/huawei/DLI.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/dli.rst
+    tags: [huawei]
+
+  - integration-name: Huawei Cloud DWS
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/dws/index.html
+    logo: /integration-logos/huawei/DWS.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/dws.rst
+    tags: [huawei]
+
+  - integration-name: Huawei Cloud SMN
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/smn/index.html
+    logo: /integration-logos/huawei/SMN.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/smn.rst
+    tags: [huawei]
+
+  - integration-name: Huawei Cloud OBS
+    external-doc-url: https://support.huaweicloud.com/intl/en-us/obs/index.html
+    logo: /integration-logos/huawei/OBS.png
+    how-to-guide:
+      - /docs/apache-airflow-providers-huawei/operators/obs.rst
+    tags: [huawei]
+
 operators:
   - integration-name: Huawei Cloud OBS
     python-modules:
@@ -43,7 +88,6 @@ operators:
   - integration-name: Huawei Cloud DWS
     python-modules:
       - airflow.providers.huawei.cloud.operators.dws
-      - airflow.providers.huawei.cloud.operators.dws_sql
   - integration-name: Huawei Cloud SMN
     python-modules:
       - airflow.providers.huawei.cloud.operators.smn
@@ -60,7 +104,7 @@ operators:
 sensors:
   - integration-name: Huawei Cloud OBS
     python-modules:
-      - airflow.providers.huawei.cloud.sensors.huawei_obs
+      - airflow.providers.huawei.cloud.sensors.huawei_obs_key
   - integration-name: Huawei Cloud DWS
     python-modules:
       - airflow.providers.huawei.cloud.sensors.dws
@@ -75,13 +119,15 @@ sensors:
       - airflow.providers.huawei.cloud.sensors.dataarts
 
 hooks:
+  - integration-name: Huawei Cloud
+    python-modules:
+      - airflow.providers.huawei.cloud.hooks.base_huawei_cloud
   - integration-name: Huawei Cloud OBS
     python-modules:
       - airflow.providers.huawei.cloud.hooks.huawei_obs
   - integration-name: Huawei Cloud DWS
     python-modules:
       - airflow.providers.huawei.cloud.hooks.dws
-      - airflow.providers.huawei.cloud.hooks.dws_sql
   - integration-name: Huawei Cloud SMN
     python-modules:
       - airflow.providers.huawei.cloud.hooks.smn
@@ -98,5 +144,3 @@ hooks:
 connection-types:
   - hook-class-name: airflow.providers.huawei.cloud.hooks.base_huawei_cloud.HuaweiBaseHook
     connection-type: huaweicloud
-  - hook-class-name: airflow.providers.huawei.cloud.hooks.dws_sql.DWSSqlHook
-    connection-type: dws
