--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -36,6 +36,14 @@ dependencies:
   - huaweicloudsdkdlf>=3.1.19
   - huaweicloudsdkiam>=3.1.19
 
+# integrations:
+#   - integration-name: Huawei Cloud SMN
+#     external-doc-url: https://www.alibabacloud.com/help/product/31815.htm
+#     logo: /integration-logos/alibaba/cloud/alibabacloud-oss.png
+#     how-to-guide:
+#       - /docs/apache-airflow-providers-alibaba/operators/oss.rst
+#     tags: [alibaba]
+
 operators:
   - integration-name: Huawei Cloud OBS
     python-modules:
