--- a/airflow/providers/huawei/provider.yaml
+++ b/airflow/providers/huawei/provider.yaml
@@ -39,7 +39,7 @@ dependencies:
 integrations:
   - integration-name: Huawei Cloud CDM
     external-doc-url: https://support.huaweicloud.com/intl/en-us/cdm/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/CDM.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/cdm.rst
     tags: [huawei]
@@ -47,7 +47,7 @@ integrations:
 
   - integration-name: Huawei Cloud DataArts
     external-doc-url: https://support.huaweicloud.com/intl/en-us/dataartsstudio/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/DataArts.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/dataarts.rst
     tags: [huawei]
@@ -55,7 +55,7 @@ integrations:
 
   - integration-name: Huawei Cloud DLI
     external-doc-url: https://support.huaweicloud.com/intl/en-us/dli/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/DLI.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/dli.rst
     tags: [huawei]
@@ -63,28 +63,28 @@ integrations:
 
   - integration-name: Huawei Cloud DWS - SQL
     external-doc-url: https://support.huaweicloud.com/intl/en-us/dws/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/DWS.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/dws_sql.rst
     tags: [huawei]
 
   - integration-name: Huawei Cloud DWS
     external-doc-url: https://support.huaweicloud.com/intl/en-us/dws/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/DWS.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/dws.rst
     tags: [huawei]
 
   - integration-name: Huawei Cloud SMN
     external-doc-url: https://support.huaweicloud.com/intl/en-us/smn/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/SMN.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/smn.rst
     tags: [huawei]
 
   - integration-name: Huawei Cloud OBS
     external-doc-url: https://support.huaweicloud.com/intl/en-us/obs/index.html
-    logo: !TODO
+    logo: /integration-logos/huawei/OBS.png
     how-to-guide:
       - /docs/apache-airflow-providers-huawei/operators/obs.rst
     tags: [huawei]
